fix(authorities): implement new requirement, add subroles as authorities sets, allow db seeding by the consuming app, improve TokenService